--- a/package.json
+++ b/package.json
@@ -1,26 +1,12 @@
 {
-  "name": "cheerp",
-  "version": "3.0.0-rc.1",
-  "bin": "bin/cheerp",
-  "description": "The C/C++ compiler for web applications",
-  "scripts": {
-    "postinstall": "node scripts/postinstall.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/leaningtech/cheerp-meta.git"
-  },
-  "keywords": [
-    "webassembly",
-    "toolchain",
-    "c++",
-    "c",
-    "compiler",
-    "wasm",
-    "leaningtech"
+  "name": "cheerp-meta",
+  "workspaces": [
+    "packages/*"
   ],
-  "author": "Leaning Technologies",
-  "license": "Apache-2.0",
-  "bugs": "https://github.com/leaningtech/cheerp-meta/issues",
-  "homepage": "https://leaningtech.com/cheerp"
+  "scripts": {
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0"
+  }
 }
