--- a/packages/cheerp/package.json
+++ b/packages/cheerp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheerp",
-  "version": "3.0.0-rc.1",
+  "version": "0.0.0-1692034395",
   "bin": "bin/cheerp.mjs",
   "main": "index.mjs",
   "types": "index.d.ts",
@@ -32,6 +32,6 @@
     "execa": "^7.2.0"
   },
   "optionalDependencies": {
-    "@leaningtech/cheerp-darwin-x64": "3.0.0-rc.1"
+    "@leaningtech/cheerp-darwin-x64": "^0.0.0-1692034395"
   }
 }
