--- a/packages/cheerp-darwin-x64/package.json
+++ b/packages/cheerp-darwin-x64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leaningtech/cheerp-darwin-x64",
-  "version": "0.0.0-1692034395",
+  "version": "3.0.0-rc.2",
   "license": "Apache-2.0 WITH LLVM-exception",
   "main": "index.mjs",
   "types": "index.d.ts",
@@ -13,5 +13,8 @@
   ],
   "scripts": {
     "postinstall": "node postinstall.mjs"
+  },
+  "dependencies": {
+    "tar-fs": "^3.0.4"
   }
 }
