--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   macos:
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [14.x, 16.x, 18.x, 20.x]
         os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
